[package]
name = "piquant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = { git = "https://github.com/bevyengine/bevy", rev = "910f984709fb58cddbb7393c948634a2540e8d72", default-features = false }
anyhow = "1.0.65"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
valence = { path = "../valence" }
